ymlFile/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  labels:
    name: web-ingress
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: web-main-service
              port: 
                number: 80
        - pathType: Prefix
          path: "/login"
          backend:
            service:
              name: web-login-service
              port:
                number: 80
        - pathType: Prefix
          path: "/item"
          backend:
            service:
              name: web-item-service
              port:
                number: 80
